Added jwt and config related uniot test